Bug 97824 - [BDW BYT KBL] [Regression] pm_rps / reset fails
Summary: [BDW BYT KBL] [Regression] pm_rps / reset fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: highest blocker
Assignee: cprigent
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 97215 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-09-15 14:43 UTC by cprigent
Modified: 2016-09-30 14:23 UTC (History)
1 user (show)

See Also:
i915 platform: BDW, BYT, KBL
i915 features: power/runtime PM


Attachments
BDW--pm_rps-reset--output (2.93 KB, text/plain)
2016-09-15 14:43 UTC, cprigent
no flags Details
BDW--pm_rps-reset--kern.log (267.98 KB, text/plain)
2016-09-15 14:43 UTC, cprigent
no flags Details

Description cprigent 2016-09-15 14:43:10 UTC
Created attachment 126560 [details]
BDW--pm_rps-reset--output

Platform: NUC5i7RYB
CPU: Intel(R) Core(TM) i7-5557U CPU @ 3.10GHz (Family 6, Model 61, Stepping 4)
Motherboard version: H73774-102
GPU: Intel® Iris™ Graphics 6100 - Intel Corporation Broadwell-U Integrated Graphics (rev 09)
Memory: two 4GB card Kingston 99U5469-045.A00LF
SSD: INTEL SSDSC2KW24

Software
Bios: RYBDWi35.86A.0358.2016.0606.1423 from https://downloadcenter.intel.com/downloads/eula/26081/BIOS-Update-RYBDWi35-86A-?httpDown=https%3A%2F%2Fdownloadmirror.intel.com%2F26081%2Feng%2FRY0358.bio
Linux distribution: Ubuntu 16.04 64 bits
Kernel: 4.8.0-rc5 bef9c1f from http://cgit.freedesktop.org/drm-intel/
  commit bef9c1f4afe24cfff578d386bde349add65673eb
  Author: Joonas Lahtinen <joonas.lahtinen@linux.intel.com>
  Date:   Mon Sep 12 11:35:34 2016 +0300
  drm-intel-nightly: 2016y-09m-12d-08h-35m-02s UTC integration manifest
libdrm-2.4.70-12 2d00869 from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-11.2.2 3a9f628 from git://anongit.freedesktop.org/mesa/mesa
cairo 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xorg-server-1.18.0-549 527c6ba from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel 2.99.917-703 15c5ff1 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva-1.7.0-47 2ebf897 from git://git.freedesktop.org/git/vaapi/libva 
vaapi-intel-driver: 1.7.0-117 8c11f51 from git://git.freedesktop.org/git/vaapi/intel-driver
Intel-Gpu-Tools 1.16 f565b6c from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git

Steps:
------
1. Execute IGT test:
# pm_rps --r reset

Actual result:
---------------
1. Test fails

Expected result:
----------------
1. Test is Pass

Regression:
-----------
Test was Pass with:
Kernel: 4.8.0-rc4 9baa666 from http://cgit.freedesktop.org/drm-intel/
  commit 9baa666b3e48f71b46c5f63541f57d2a95a1b1c0
  Author: Chris Wilson <chris@chris-wilson.co.uk>
  Date:   Sat Sep 3 13:12:38 2016 +0100
  drm-intel-nightly: 2016y-09m-03d-12h-12m-15s UTC integration manifest
libdrm-2.4.70-6 4462303 from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-11.2.2 3a9f628from git://anongit.freedesktop.org/mesa/mesa
cairo 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xorg-server-1.18.0-546 deae9c7 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel 2.99.917-701 205146b from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva-1.7.0-47 2ebf897 from git://git.freedesktop.org/git/vaapi/libva 
vaapi-intel-driver: 1.7.0-95 1817bee from git://git.freedesktop.org/git/vaapi/intel-driver
Intel-Gpu-Tools 1.16 6bd4208 from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git
Comment 1 cprigent 2016-09-15 14:43:29 UTC
Created attachment 126561 [details]
BDW--pm_rps-reset--kern.log
Comment 2 cprigent 2016-09-15 14:43:57 UTC
Similar as bug 97215
Comment 3 yann 2016-09-16 14:40:16 UTC
fix submitted by Chris and available here: https://patchwork.freedesktop.org/series/12575/

Chirstophe, please re-test
Comment 4 yann 2016-09-19 14:28:01 UTC
*** Bug 97215 has been marked as a duplicate of this bug. ***
Comment 5 Jari Tahvanainen 2016-09-21 10:52:59 UTC
Highest+Blocker due to regression w/o workaround
Comment 6 Chris Wilson 2016-09-21 11:15:46 UTC
(In reply to Jari Tahvanainen from comment #5)
> Highest+Blocker due to regression w/o workaround

Workaround is to blink. Once the system is idle, rps is fully functional again afterwards. (Just this test maintains a busy state.)
Comment 7 yann 2016-09-21 13:57:53 UTC
New patch set submitted by Chris and available here: 
https://patchwork.freedesktop.org/series/12741/

Chirstophe, please re-test
Comment 8 Chris Wilson 2016-09-21 16:31:25 UTC
commit f2a91d1a6f5960c08f1ca60bd076f4dc020c50c6
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Sep 21 14:51:06 2016 +0100

    drm/i915: Restore current RPS state after reset
    
    Following commit 821ed7df6e2a ("drm/i915: Update reset path to fix
    incomplete requests") we no longer mark the context as lost on reset as
    we keep the requests (and contexts) alive. However, RPS remains reset
    and we need to restore the current state to match the in-flight
    requests.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97824
    Fixes: 821ed7df6e2a ("drm/i915: Update reset path to fix incomplete requests")
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Mika Kuoppala <mika.kuoppala@intel.com>
    Cc: Tvrtko Ursulin <tvrtko.ursulin@intel.com>
    Cc: Arun Siluvery <arun.siluvery@linux.intel.com>
    Reviewed-by: Mika Kuoppala <mika.kuoppala@intel.com>
    Link: http://patchwork.freedesktop.org/patch/msgid/20160921135108.29574-1-chris@chris-wilson.co.uk
Comment 9 cprigent 2016-09-30 14:23:57 UTC
I confirm the test is Pass, checked with:

Kernel: 4.8.0-rc8 aab15c2 from http://cgit.freedesktop.org/drm-intel/
   commit aab15c274da587bcab19376d2caa9d6626440335
   Author: Jani Nikula <jani.nikula@intel.com>
   Date:   Mon Sep 26 15:11:53 2016 +0300
   drm-intel-nightly: 2016y-09m-26d-12h-11m-33s UTC integration manifest
libdrm-2.4.70-14 0659558 from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-12.0.0 8b06176 from git://anongit.freedesktop.org/mesa/mesa
cairo 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xorg-server-1.18.99.901-14 ba199cb from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel 2.99.917-708 8f33f80 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva-1.7.2-38 3b7e499 from git://git.freedesktop.org/git/vaapi/libva 
vaapi-intel-driver: 1.7.2-101 302cf63 from git://git.freedesktop.org/git/vaapi/intel-driver
IGT: intel-gpu-tools-1.16-30 32b2021 from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git

So closed


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.